Archive2/88/decaaaadacfc1d/output
main.cpp: In function 'void show(const int_seq<Ns ...>&)':
main.cpp:13:27: error: expected ';' before '...' token
 { (std::cout << Ns << " ")...; }
                           ^
main.cpp:13:30: error: parameter packs not expanded with '...':
 { (std::cout << Ns << " ")...; }
                              ^
main.cpp:13:30: note:         'Ns'
